styles.css
body{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    min-height: 100vh;
    min-width: 680px;
    margin: 0;
    display: flex;
    flex-direction: column;
}

/* elements in header section */

.header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 80px;
    padding-bottom: 50px;
}

h1{
    font-size: 18px;
    margin: 0;
}

ul{
    display: flex;
    /* this removes the dots on the list items*/
    list-style-type: none;
    text-decoration: none;
}

li {
    padding-left: 20px;
}

/* elements in intro section */

.intro{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0px 80px;
    padding-bottom: 50px;
    margin: 0;
}

.intro_left{
    display: flex;
    flex-direction: column;
    max-width: 500px;
    gap: 20px;
    margin-bottom: 50px;
}

.intro_left > h1{
    font-size: 48px;
    font-weight: bold;
}

.intro > .image{
    display: flex; 
}

img{
    max-width: 100%;
    max-height: 400px;
}

/* elements in mid section */

.mid{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.info{
    margin: 50px 0px;
}

.info > h1{
    font-size: 36px;
    font-weight: bold;
    text-align: center;
    padding-bottom: 50px;
}


.blocks{
    display: flex;
    flex-wrap: wrap;
    padding: 0px 80px;
    gap: 40px;
    align-items: flex-start;
    justify-content: center;
}

.block{
    display: flex;
    flex-direction: column;
    text-align: center;
    font-size: 20px;
    font-weight: 200;
}


.quote{
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    padding: 50px 80px;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    justify-content: center;
}

.quote > p{
    font-size: 25px;
    text-align: end;    
    margin: 20px 0px;
}

.advert{
    margin: 80px 80px;
    border-radius: 5px;
    color: white;
    background-color: #3882f6;
    display: flex;
    flex-wrap: wrap;
    padding: 30px;
    align-items: center;
    justify-content: space-between;
}

.advert >h2 {
    margin: 0;
    font-size: 18px;
}

.advert > button{
    border: 2px solid white;
}

/* elements in footer section */

.footer{
    display: flex;
    min-height: 70px;
    justify-content: center;
    align-items: center;
}


/* universal css */

p{
    font-size: 18px;
    font-weight: 200px;
    margin: 0;
}

button{
    border: none;
    border-radius: 5px;
    background-color: #3882f6;
    padding: 20px 30px;
    font-size: 25px;
    font-weight: bold;
    color: #e5e7eb;
    max-width: fit-content;
}

/* Colors for elements within the page */

.blue_background{
    background-color: #1f2937;
    color: white;
}

